# cpp-static-library-boilerplate

./: .gitignore  CMakeLists.txt  mylib.pc.in
include/: library.h
src/: library.cpp  private.h
